# UCI-MDS-F25-Soccer

./: .gitignore  Heatmap.ipynb  README.md  main.py  pyproject.toml
Streamlit/: aggregate_stats.py  app.py  charts.py  db_queries.py  heatmaps.py  stats_utils.py
metrics/: data_processing.py  requirements.txt  xg.ipynb  xg.py  xt.ipynb  xt_grid.npy
metrics/PPDA_FieldTilt/: field_tilt.ipynb  field_tilt_per_match.csv  field_tilt_team_average.csv  ppda.ipynb  ppda_per_match.csv  ppda_team_average.csv
metrics/weights/: xg_pipeline.pkl
notebooks/: Heatmap.ipynb  change_pt_detection.ipynb  change_pt_example.ipynb  exploration.ipynb  kloppy_exploration.ipynb
scripts/: compute_xG_LR.py  compute_xT.py
statsbomb/: DATABASE_SPECIFICATION.md  statsbomb_euro2020.db
