[project]
name = "uci-mds-f25-soccer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "changepoint>=0.4.0",
    "kloppy>=3.18.0",
    "mplsoccer>=1.6.1",
    "pillow>=12.0.0",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "xgboost>=3.1.2",
]
